--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
         map.addControl(
           new maplibregl.AttributionControl({
             customAttribution:
-              '<a href="https://threads.com/@tomeyinhanoi" target="_blank">By Tomey</a>',
+              '<a href="https://threads.com/@tomeyinhanoi" target="_blank" style="text-decoration: underline">By Tomey</a>',
             compact: true,
           }),
           "bottom-left"
