--- a/index.html
+++ b/index.html
@@ -2,56 +2,25 @@
 <html lang="vi">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="manifest" href="/manifest.json" />
+
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1,
+    viewport-fit=cover"
+    />
     <title>Hanoi Maps</title>
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="stylesheet" href="/style.css" />
     <link
       href="https://unpkg.com/maplibre-gl@^5.9.0/dist/maplibre-gl.css"
       rel="stylesheet"
     />
     <script src="https://unpkg.com/maplibre-gl@^5.9.0/dist/maplibre-gl.js"></script>
-    <style>
-      html,
-      body,
-      #map {
-        margin: 0;
-        padding: 0;
-        width: 100%;
-        height: 100%;
-      }
-      .layer-switcher {
-        position: absolute;
-        top: 10px;
-        right: 10px;
-        background: white;
-        padding: 6px;
-        border-radius: 8px;
-        border: 1px solid #ccc;
-        z-index: 1000;
-      }
-      .layer-switcher select {
-        appearance: none;
-        -webkit-appearance: none;
-        -moz-appearance: none;
-        border: none;
-        background: none;
-        font-size: 16px;
-        outline: none;
-        cursor: pointer;
-        color: #000;
-      }
-      #opacity-slider {
-        position: absolute;
-        z-index: 1001;
-        right: -40px;
-        top: 50%;
-        width: 140px;
-        height: 48px;
-        background: transparent;
-        transform: translateY(-50%) rotate(-90deg);
-        transform-origin: center;
-      }
-    </style>
   </head>
   <body>
     <div id="map"></div>
