--- a/info/index.html
+++ b/info/index.html
@@ -2,43 +2,32 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1,
+    viewport-fit=cover"
+    />
     <title>Hanoi Maps | Info</title>
+    <link rel="stylesheet" href="/style.css" />
     <style>
       body {
-        font-family: Arial, Helvetica, sans-serif;
         padding: 24px;
-        background-color: #faf9f6;
-        color: #222;
-        box-sizing: border-box;
+        color: #faf9f6;
       }
-      h1 {
-        margin: 8px 0 24px 0;
-      }
-      .container {
-        max-width: 480px;
-        margin: 0 auto;
-      }
+
       a {
         text-decoration: none;
         display: inline-flex;
-        color: inherit;
         font-size: 16px;
         align-items: center;
         padding: 8px 0;
-      }
-      .yearCol {
-        padding: 8px 0;
-      }
-      .yearCol a {
-        padding: 0;
-      }
-      .yearCol a[href] {
-        text-decoration: underline;
-      }
-      .infoCol {
-        padding: 8px 0 16px 20px;
-        font-style: italic;
       }
     </style>
   </head>
