--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
     <script>
       const mapData = [
         {
+          year: "1873",
+          title: "1873",
+          extent: [11778588.863, 2391034.561, 11786438.652, 2399428.351],
+        },
+        {
           year: "1891b",
           title: "1891",
           extent: [
