--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
     <script>
       const mapData = [
         {
+          year: "1831",
+          title: "1831",
+          extent: [11777192.517, 2392251.323, 11785501.995, 2398586.042],
+        },
+        {
           year: "1873",
           title: "1873",
           extent: [11778588.863, 2391034.561, 11786438.652, 2399428.351],
