--- a/index.html
+++ b/index.html
@@ -65,6 +65,16 @@
           ],
         },
         {
+          year: "1911",
+          title: "1911",
+          extent: [11778238.808, 2392035.464, 11787379.276, 2399887.42],
+        },
+        {
+          year: "1925",
+          title: "1925",
+          extent: [11775410.663, 2390787.549, 11789285.709, 2400980.824],
+        },
+        {
           year: "1926",
           title: "1926",
           extent: [
