--- a/info/index.html
+++ b/info/index.html
@@ -54,6 +54,16 @@
     <script>
       const mapSources = [
         {
+          year: "1831",
+          link: "https://opac.vass.gov.vn/search~S1*vie?/Xho{u00E0}i+{u0111}{u1EE9}c+ph{u1EE7}+to{u00E0}n+{u0111}{u1ED3}&searchscope=1&SORT=D/Xho{u00E0}i+{u0111}{u1EE9}c+ph{u1EE7}+to{u00E0}n+{u0111}{u1ED3}&searchscope=1&SORT=D&SUBKEY=ho%C3%A0i+%C4%91%E1%BB%A9c+ph%E1%BB%A7+to%C3%A0n+%C4%91%E1%BB%93/1%2C22%2C22%2CB/frameset&FF=Xho{u00E0}i+{u0111}{u1EE9}c+ph{u1EE7}+to{u00E0}n+{u0111}{u1ED3}&searchscope=1&SORT=D&1%2C1%2C",
+          info: "Hoài Đức phủ toàn đồ (Viện Thông tin Khoa học xã hội)",
+        },
+        {
+          year: "1873",
+          link: "https://gallica.bnf.fr/ark:/12148/btv1b531213085/f1.item",
+          info: "Plan dessiné par Pham-Dinh-Bach (Service géographique de l'Indo-Chine)",
+        },
+        {
           year: "1891",
           link: "https://commons.wikimedia.org/wiki/File:Plan_de_Hano%C3%AF_et_de_ses_Environs_-_Dress%C3%A9e_sous_la_direction_de_Charles_Halais_Ancien_R%C3%A9sident-Maire_de_Hano%C3%AF_;_Dessin%C3%A9_par_Rapha%C3%ABl_Enguehard_G%C3%A9ographe_;_Grav%C3%A9_par_A._Simon,_13_Rue_du_Val-de-Gr%C3%A2ce,_Paris_-_btv1b8439869f.jpg",
           info: "Plan de Hanoï et de ses Environs (Charles Halais)",
@@ -62,6 +72,16 @@
           year: "1894",
           link: "https://gallica.bnf.fr/ark:/12148/btv1b53147353p",
           info: "Plan de la ville de Hanoï (Bureau topographique des troupes de l'Indo-Chine)",
+        },
+        {
+          year: "1911",
+          link: "https://commons.wikimedia.org/wiki/File:Plan_de_la_ville_de_Hano%C3%AF_en_1911.jpg",
+          info: "Plan de la ville de Hanoï (Service géographique de l'Indo-Chine)",
+        },
+        {
+          year: "1925",
+          link: "https://commons.wikimedia.org/wiki/File:Plan_de_la_ville_de_Hano%C3%AF_-_btv1b530649627.jpg",
+          info: "Plan de la ville de Hanoï (Service géographique de l'Indo-Chine)",
         },
         {
           year: "1926",
