--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@
           extent: [11778238.808, 2392035.464, 11787379.276, 2399887.42],
         },
         {
+          year: "1920",
+          title: "1920",
+          extent: [11774584.27, 2389781.221, 11789425.716, 2400728.659],
+        },
+        {
           year: "1925",
           title: "1925",
           extent: [11775410.663, 2390787.549, 11789285.709, 2400980.824],
