--- a/info/index.html
+++ b/info/index.html
@@ -79,6 +79,11 @@
           info: "Plan de la ville de Hanoï (Service géographique de l'Indo-Chine)",
         },
         {
+          year: "1920",
+          link: "https://gallica.bnf.fr/ark:/12148/bpt6k11001779/f137.item",
+          info: "Plan de Hanoï (Service géographique de l'Indo-Chine)",
+        },
+        {
           year: "1925",
           link: "https://commons.wikimedia.org/wiki/File:Plan_de_la_ville_de_Hano%C3%AF_-_btv1b530649627.jpg",
           info: "Plan de la ville de Hanoï (Service géographique de l'Indo-Chine)",
