--- a/info/index.html
+++ b/info/index.html
@@ -3,17 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1,
-    "
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hanoi Maps | Info</title>
     <link rel="stylesheet" href="/style.css" />
     <style>
       body {
         padding: 24px;
-        color: #faf9f6;
+        overflow: auto !important;
+        height: auto !important;
       }
 
       a {
@@ -94,7 +91,7 @@
           info: "L'Indochine d'hier et d'aujourd'hui (Cucherousset)",
         },
         {
-          yar: "1929",
+          year: "1929",
           link: "https://catalogue.bnf.fr/ark:/12148/cb406928273",
           info: "Plan de la ville de Hanoï (Service géographique de l’Indochine)",
         },
