--- a/info/index.html
+++ b/info/index.html
@@ -5,22 +5,7 @@
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hanoi Maps | Info</title>
-    <link rel="stylesheet" href="/style.css" />
-    <style>
-      body {
-        padding: 24px;
-        overflow: auto !important;
-        height: auto !important;
-      }
-
-      a {
-        text-decoration: none;
-        display: inline-flex;
-        font-size: 16px;
-        align-items: center;
-        padding: 8px 0;
-      }
-    </style>
+    <link rel="stylesheet" href="/info/info.css" />
   </head>
   <body>
     <div class="container">
