--- a/villas/index.html
+++ b/villas/index.html
@@ -20,7 +20,7 @@
       rel="stylesheet"
     />
     <script src="https://unpkg.com/maplibre-gl@5.9.0/dist/maplibre-gl.js"></script>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/villas/villas.css" />
   </head>
   <body>
     <div id="map"></div>
@@ -66,7 +66,7 @@
         map.addControl(
           new maplibregl.AttributionControl({
             customAttribution:
-              '<a href="https://threads.com/@tomeyinhanoi" target="_blank" style="text-decoration: underline">By Tomey</a>',
+              '<a href="https://threads.com/@tomeyinhanoi" target="_blank" style="text-decoration: underline">By Tomey</a> | <a href="https://thuvienphapluat.vn/van-ban/Bat-dong-san/Quyet-dinh-1845-QD-UBND-2022-Danh-muc-nha-biet-thu-cu-Ha-Noi-truoc-1954-516094.aspx" target="_blank"  style="text-decoration: underline">Sources</a>',
             compact: true,
           }),
           "bottom-left"
