--- a/villas/index.html
+++ b/villas/index.html
@@ -5,7 +5,7 @@
     <title>Hanoi Maps | Villas</title>
     <link rel="manifest" href="/manifest.json" />
 
-    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
 
     <meta name="theme-color" content="#000000" />
