add 1885 and add info and dropdown

--- a/info/index.html
+++ b/info/index.html
@@ -46,6 +46,11 @@
           info: "Plan dessiné par Pham-Dinh-Bach (Service géographique de l'Indo-Chine)",
         },
         {
+          year: "1885",
+          link: "https://gallica.bnf.fr/ark:/12148/btv1b550132625",
+          info: "Plan de la Ville de Hanoï en 1885 (Imprimerie photo-lithographique du Cadastre du Tonkin)",
+        },
+        {
           year: "1891",
           link: "https://commons.wikimedia.org/wiki/File:Plan_de_Hano%C3%AF_et_de_ses_Environs_-_Dress%C3%A9e_sous_la_direction_de_Charles_Halais_Ancien_R%C3%A9sident-Maire_de_Hano%C3%AF_;_Dessin%C3%A9_par_Rapha%C3%ABl_Enguehard_G%C3%A9ographe_;_Grav%C3%A9_par_A._Simon,_13_Rue_du_Val-de-Gr%C3%A2ce,_Paris_-_btv1b8439869f.jpg",
           info: "Plan de Hanoï et de ses Environs (Charles Halais)",
@@ -88,12 +93,17 @@
         {
           year: "1932",
           link: "http://belleindochine.free.fr/images/Plan/1000PlanHanoi1932Madrolle.jpg",
-          info: "Plan de la ville d’Hanoi (Guide Madrolle)",
+          info: "Plan de la ville d’Hanoi (Guides Madrolle)",
         },
         {
           year: "1942",
-          link: "",
-          info: "",
+          link: "https://commons.wikimedia.org/wiki/File:Plan_de_la_ville_de_Hano%C3%AF_-_btv1b531893703.jpg",
+          info: "Plan de la ville de Hanoï (Service géographique de l’Indochine)",
+        },
+        {
+          year: "1951",
+          link: "https://gallica.bnf.fr/ark:/12148/btv1b532122083",
+          info: "Hanoi Economique (Service du cadastre du Nord Vietnam)",
         },
         {
           year: "1952",
