--- a/info/index.html
+++ b/info/index.html
@@ -96,6 +96,11 @@
           info: "Plan de la ville d’Hanoi (Guides Madrolle)",
         },
         {
+          year: "1936",
+          link: "https://gallica.bnf.fr/ark:/12148/btv1b53066945f/",
+          info: "Plan de la ville de Hanoï (Bibliothèque nationale de France)",
+        },
+        {
           year: "1942",
           link: "https://commons.wikimedia.org/wiki/File:Plan_de_la_ville_de_Hano%C3%AF_-_btv1b531893703.jpg",
           info: "Plan de la ville de Hanoï (Service géographique de l’Indochine)",
