--- a/villas/index.html
+++ b/villas/index.html
@@ -72,7 +72,7 @@
           [105.5, 20.7],
           [106.1, 21.5],
         ],
-        attributionControl: false,
+        attributionControl: { compact: true },
       });
 
       map.on("styledata", () => {
