--- a/info/index.html
+++ b/info/index.html
@@ -105,6 +105,7 @@
           link: "https://commons.wikimedia.org/wiki/File:Plan_de_la_ville_de_Hano%C3%AF_-_btv1b531893703.jpg",
           info: "Plan de la ville de Hanoï (Service géographique de l’Indochine)",
         },
+        { year: "1950", link: "", info: "Bản đồ Hà Nội 1950 (?)" },
         {
           year: "1951",
           link: "https://gallica.bnf.fr/ark:/12148/btv1b532122083",
