--- a/info/index.html
+++ b/info/index.html
@@ -61,6 +61,11 @@
           info: "Plan de la ville de Hanoï (Bureau topographique des troupes de l'Indo-Chine)",
         },
         {
+          year: "1902",
+          link: "https://gallica.bnf.fr/ark:/12148/btv1b10106810f.r=saigon?rk=364808%3B4",
+          info: "Plan de la ville de Hanoï (Service géographique de l'Indo-Chine)",
+        },
+        {
           year: "1911",
           link: "https://commons.wikimedia.org/wiki/File:Plan_de_la_ville_de_Hano%C3%AF_en_1911.jpg",
           info: "Plan de la ville de Hanoï (Service géographique de l'Indo-Chine)",
