--- a/info/index.html
+++ b/info/index.html
@@ -76,6 +76,11 @@
           info: "Plan de Hanoï (Service géographique de l'Indo-Chine)",
         },
         {
+          year: "1922",
+          link: "https://gallica.bnf.fr/ark:/12148/btv1b530644501",
+          info: "Plan de la ville de Hanoï (Service géographique de l'Indo-Chine)",
+        },
+        {
           year: "1925",
           link: "https://commons.wikimedia.org/wiki/File:Plan_de_la_ville_de_Hano%C3%AF_-_btv1b530649627.jpg",
           info: "Plan de la ville de Hanoï (Service géographique de l'Indo-Chine)",
