--- a/info/index.html
+++ b/info/index.html
@@ -51,8 +51,13 @@
           info: "Plan de la Ville de Hanoï en 1885 (Imprimerie photo-lithographique du Cadastre du Tonkin)",
         },
         {
+          year: "1890",
+          link: "https://gallica.bnf.fr/ark:/12148/btv1b53195606z",
+          info: "Plan de la ville de Hanoï (M. V. Leclanger, L'Éveil économique de l'Indochine)",
+        },
+        {
           year: "1891",
-          link: "https://commons.wikimedia.org/wiki/File:Plan_de_Hano%C3%AF_et_de_ses_Environs_-_Dress%C3%A9e_sous_la_direction_de_Charles_Halais_Ancien_R%C3%A9sident-Maire_de_Hano%C3%AF_;_Dessin%C3%A9_par_Rapha%C3%ABl_Enguehard_G%C3%A9ographe_;_Grav%C3%A9_par_A._Simon,_13_Rue_du_Val-de-Gr%C3%A2ce,_Paris_-_btv1b8439869f.jpg",
+          link: "https://gallica.bnf.fr/ark:/12148/btv1b8439869f",
           info: "Plan de Hanoï et de ses Environs (Charles Halais)",
         },
         {
@@ -67,7 +72,7 @@
         },
         {
           year: "1911",
-          link: "https://commons.wikimedia.org/wiki/File:Plan_de_la_ville_de_Hano%C3%AF_en_1911.jpg",
+          link: "hhttps://gallica.bnf.fr/ark:/12148/btv1b53063324v",
           info: "Plan de la ville de Hanoï (Service géographique de l'Indo-Chine)",
         },
         {
@@ -82,7 +87,7 @@
         },
         {
           year: "1925",
-          link: "https://commons.wikimedia.org/wiki/File:Plan_de_la_ville_de_Hano%C3%AF_-_btv1b530649627.jpg",
+          link: "https://gallica.bnf.fr/ark:/12148/btv1b530649627",
           info: "Plan de la ville de Hanoï (Service géographique de l'Indo-Chine)",
         },
         {
@@ -112,7 +117,7 @@
         },
         {
           year: "1942",
-          link: "https://commons.wikimedia.org/wiki/File:Plan_de_la_ville_de_Hano%C3%AF_-_btv1b531893703.jpg",
+          link: "https://gallica.bnf.fr/ark:/12148/btv1b531893703",
           info: "Plan de la ville de Hanoï (Service géographique de l’Indochine)",
         },
         { year: "1950", link: "", info: "Bản đồ Hà Nội 1950 (?)" },
