--- a/info/index.html
+++ b/info/index.html
@@ -131,6 +131,11 @@
           link: "",
           info: "Plan de la Ville de Hanoi (Forces Terrestres d’Extrême-Orient)",
         },
+        {
+          year: "1968",
+          link: "https://maps.lib.utexas.edu/maps/vietnam.html#:~:text=Agency%2C%201968%20(5.6MB)-,Ha%20Noi%20%5BHanoi%5D,-1%3A12%2C500%2C%20Edition",
+          info: "Ha Noi City Map (National Imagery and Mapping Agency)",
+        },
       ];
       const tbody = document.querySelector("#maps-table tbody");
 
